<resources>
  <string name="app_name">Sample app</string>
  <string name="network_error">Network error</string>
  <string name="retry">Retry</string>
  <string name="no_data_text">No results found</string>
  <string name="user_row_name_label">Name:</string>
  <string name="user_row_gender_label">Gender:</string>
  <string name="user_row_email_label">Email:</string>
  <string name="user_row_status_label">Status:</string>
  <string name="user_row_male_label">Male:</string>
  <string name="user_row_female_label">Female:</string>
  <string name="user_row_active_label">Active:</string>

  <string name="question_delete_user_confirm">Are you sure you want remove this item?</string>

  <string name="action_add">Add</string>
  <string name="action_yes">Yes</string>
  <string name="action_no">No</string>
</resources>